# myftp

./: Linux程序设计实验大作业实验报告.docx  Linux程序设计实验大作业相关说明.docx  README.md
ftpclient/: Makefile  Makefile.am  Makefile.in  README  config.h  config.h.in  config.status  configure  configure.ac
ftpclient/autom4te.cache/: output.0  requests  traces.0  traces.1
ftpclient/inc/: Makefile  Makefile.am  Makefile.in  myftp.h  util.h
ftpclient/src/: Makefile  Makefile.am  Makefile.in  main.c  myftp  myftp.c  util.c
ftpclient/src/.deps/: myftp-main.Po  myftp-myftp.Po  myftp-util.Po
ftpserver/: Makefile  README  config.h  config.h.in  config.status  configure  configure.ac
ftpserver/autom4te.cache/: output.0  requests  traces.0  traces.1
ftpserver/inc/: Makefile  Makefile.am  Makefile.in  ftpserver.h
ftpserver/src/: Makefile  Makefile.am  Makefile.in  ftpserver  ftpserver.c  main.c  users
ftpserver/src/.deps/: ftpserver-ftpserver.Po  ftpserver-main.Po  ftpserver-util.Po
用户生成和删除脚本/: user_add.sh  user_del.sh
